--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@tailwind;
+@import 'tailwindcss';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,5 +8,14 @@
 @plugin '@tailwindcss/typography';
 
 /* Modo oscuro basado en clases */
-/* @custom-variant dark (&:where(.dark, .dark *)); */
 @variant dark (&:where(.dark, .dark *));
+
+/* Personalización del color de fondo en modo oscuro */
+/* .dark {
+  --tw-bg-opacity: 1;
+  background-color: #0f0f10;
+}
+
+.dark body {
+  background-color: #0f0f10;
+} */
